--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="add_to_favourite">Add to favourite</string>
     <string name="add_to_cart">Add to cart</string>
     <string name="product_title">Nike Air Jordon\nNike shoes flexible for wo..</string>
+    <string name="route">Route</string>
 </resources>
