Added search screen + modified products screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="add_to_cart">Add to cart</string>
     <string name="product_title">Nike Air Jordon\nNike shoes flexible for wo..</string>
     <string name="route">Route</string>
+    <string name="search_icon">search icon</string>
+    <string name="cart_icon">cart icon</string>
 </resources>
